<resources>
    <string name="app_name">Amazing Stuff</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_details">Details</string>

    <string name="transition_temperature">temperature</string>
    <string name="transition_date">date</string>
    <string name="transition_card">card</string>
    <string name="transition_pressure">pressure</string>
    <string name="transition_humidity">humidity</string>
    <string name="transition_wind">wind</string>
    <string name="transition_wind_direction">wind direction</string>
    <string name="transition_icon">icon</string>
</resources>
