<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="ds.features.binding.Bindings" />

        <variable
            name="weather"
            type="ds.features.model.WeatherData"
            />

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener"
            />

    </data>

  <!--  <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >-->

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:foreground="?attr/selectableItemBackground"
            android:transitionName="@string/transition_card"
            app:cardElevation="1dp"
            app:onClickListener="@{onClickListener}"

            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                >

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginRight="8dp"
                    android:transitionName="@string/transition_icon"
                    app:iconUrl='@{weather.getIconUrl()}'
                    />


                <TextView
                    android:id="@+id/date"
                    style="@style/item_text2"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="@{Bindings.fetchDate(weather.dt*1000)}"
                    android:transitionName="@string/transition_date"
                    />

                <TextView
                    android:id="@+id/temp"
                    style="@style/item_text1"
                    android:layout_toRightOf="@+id/image"
                    android:text="@{String.format(&quot;%s°&quot;,weather.main.temp)}"
                    android:transitionName="@string/transition_temperature"
                    />

                <TextView
                    android:id="@+id/humidity"
                    style="@style/item_text1"
                    android:layout_alignLeft="@+id/temp"
                    android:layout_below="@+id/temp"
                    android:text="@{String.format(&quot;%s%%&quot;,weather.main.humidity)}"
                    android:transitionName="@string/transition_humidity"
                    />

                <TextView
                    android:id="@+id/pressure"
                    style="@style/item_text1"
                    android:layout_toRightOf="@+id/temp"
                    android:text="@{String.format(&quot;%shpa&quot;,weather.main.pressure)}"
                    android:transitionName="@string/transition_pressure"
                    />

                <TextView
                    android:id="@+id/wind"
                    style="@style/item_text1"
                    android:layout_alignLeft="@+id/pressure"
                    android:layout_below="@+id/pressure"
                    android:layout_marginRight="4dp"
                    android:layout_toRightOf="@+id/temp"
                    android:minWidth="0dp"
                    android:text="@{String.format(&quot;%sm/s&quot;,weather.wind.speed)}"
                    android:transitionName="@string/transition_wind"
                    />

                <ImageView
                    android:id="@+id/wind_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/humidity"
                    android:layout_toRightOf="@+id/wind"
                    android:src="@drawable/ic_trending_neutral_black"
                    android:tint="@color/accent"
                    android:transitionName="@string/transition_wind_direction"
                    app:windDirection="@{weather.wind.deg}"
                    />


            </RelativeLayout>

        </android.support.v7.widget.CardView>


  <!--  </FrameLayout>
-->

</layout>