<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <data>

        <import type="ds.features.binding.Bindings" />

        <variable
            name="weather"
            type="ds.features.model.WeatherData"
            />


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            app:title="Details"
            />

        <TextView
            android:id="@+id/city"
            style="@style/city_header"
            android:layout_margin="@dimen/abc_action_bar_content_inset_material"
            android:text="Kharkiv"
            />


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/abc_action_bar_content_inset_material"
            android:layout_marginRight="@dimen/abc_action_bar_content_inset_material"
            android:id="@+id/card"
            >

            <android.support.v7.widget.CardView
                android:id="@+id/root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/space"
                android:layout_alignParentTop="true"
                android:layout_margin="2dp"
                android:transitionName="@string/transition_card"
                app:cardElevation="3dp"
                />

            <LinearLayout
                android:id="@+id/row1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/image"
                android:layout_toRightOf="@+id/image"
                android:elevation="4dp"
                android:orientation="vertical"
                android:transitionGroup="true"
                >

                <TextView
                    android:id="@+id/dateLabel"
                    style="@style/item_text3"
                    android:text="Date"

                    />

                <TextView
                    android:id="@+id/tempLabel"
                    style="@style/item_text3"
                    android:text="Temperature"
                    />

                <TextView
                    android:id="@+id/humidityLabel"
                    style="@style/item_text3"
                    android:text="Humidity"
                    />

                <TextView
                    android:id="@+id/pressureLabel"
                    style="@style/item_text3"
                    android:text="Pressure"
                    />

                <TextView
                    android:id="@+id/windLabel"
                    style="@style/item_text3"
                    android:text="Wind"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/row1"
                android:layout_toRightOf="@+id/row1"
                android:elevation="3dp"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/date"
                    style="@style/item_text1"
                    android:text="@{Bindings.fetchDate(weather.dt*1000)}"
                    android:transitionName="@string/transition_date"
                    />

                <TextView
                    android:id="@+id/temp"
                    style="@style/item_text1"
                    android:text='@{String.format("%s°",weather.main.temp)}'
                    android:transitionName="@string/transition_temperature"
                    />

                <TextView
                    android:id="@+id/humidity"
                    style="@style/item_text1"
                    android:text='@{String.format("%s%%",weather.main.humidity)}'
                    android:transitionName="@string/transition_humidity"
                    />

                <TextView
                    android:id="@+id/pressure"
                    style="@style/item_text1"
                    android:text='@{String.format("%shpa",weather.main.pressure)}'
                    android:transitionName="@string/transition_pressure"
                    />

                <TextView
                    android:id="@+id/wind"
                    style="@style/item_text1"
                    android:layout_marginRight="4dp"
                    android:minWidth="0dp"
                    android:text='@{String.format("%sm/s",weather.wind.speed)}'
                    android:transitionName="@string/transition_wind"
                    />


            </LinearLayout>

            <ImageView
                android:id="@+id/wind_direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/row2"
                android:layout_toRightOf="@+id/row2"
                android:src="@drawable/ic_trending_neutral_black"
                android:tint="@color/accent"
                android:transitionName="@string/transition_wind_direction"
                android:elevation="3dp"
                app:windDirectionNow="@{weather.wind.deg}"
                />

            <ImageView
                android:id="@+id/image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:elevation="3dp"
                android:transitionName="@string/transition_icon"
                app:iconUrl='@{weather.getIconUrl()}'

                />


            <Space
                android:id="@+id/space"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_below="@id/row1"
                />


        </RelativeLayout>


    </LinearLayout>

</layout>